<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Tracker</string>

    <string name="message_gps_permissions">App has no GPS permissions!</string>

    <string name="activity_title_create">Create location</string>
    <string name="activity_title_edit">Edit location</string>
    <string name="activity_title_settings">Settings</string>

    <string name="dialog_title_create">Create location</string>
    <string name="dialog_title_edit">Edit location</string>
    <string name="dialog_title_delete">Delete location</string>
    <string name="dialog_title_view">Details</string>
    <string name="dialog_title_server_url">Server URL</string>
    <string name="dialog_title_server_password">Server Password</string>
    <string name="dialog_title_kml_export">KML Export</string>
    <string name="dialog_title_help">Help &amp; Feedback</string>
    <string name="dialog_title_error">Error</string>

    <string name="dialog_message_delete">Do you really want to delete this location?</string>
    <string name="dialog_message_help"><b>Tracker</b>. A simple open source Android app to record visited places.\n
        \nTracker isn\'t intended to record your complete location history or record your location for a specific time. It\'s more like a little diary you can use at your vacation trip. &#x1F642;\n
        \nDeveloped by <b>Matthias Kellnhofer</b>.
        \n<a href='https://github.com/mkellnhofer'>GitHub</a> - <a href='https://stackoverflow.com/users/8253209'>Stack Overflow</a> - <a href='https://www.linkedin.com/in/mkellnhofer'>LinkedIn</a>\n
        \nThe Tracker server software can be found here: <a href='https://github.com/mkellnhofer/tracker-server'>https://github.com/mkellnhofer/tracker-server</a>\n
        \nReport bugs or request features here: <a href='https://github.com/mkellnhofer/tracker-android/issues'>https://github.com/mkellnhofer/tracker-android/issues</a>.</string>
    <string name="dialog_message_missing_api_key">The Google Maps API key is missing!\n
        \nThis app does not work without a valid API key. Please insert API key into file \'/app/src/main/res/values/keys.xml\'.</string>

    <string name="action_create">Create</string>
    <string name="action_edit">Edit</string>
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>
    <string name="action_search">Search</string>
    <string name="action_settings">Settings</string>
    <string name="action_kml_export">Export as KML</string>
    <string name="action_help">Help &amp; Feedback</string>
    <string name="action_ok">OK</string>
    <string name="action_retry">Retry</string>
    <string name="action_cancel">Cancel</string>

    <string name="category_general">General</string>
    <string name="category_persons">Persons</string>

    <string name="empty_locations">No Locations.</string>
    <string name="empty_persons">none</string>

    <string name="hint_name">Name</string>
    <string name="hint_date">Date</string>
    <string name="hint_description">Description</string>
    <string name="hint_person_name">Name</string>
    <string name="hint_search">Search</string>
    <string name="hint_server_url">Server URL</string>
    <string name="hint_server_password">Server password</string>

    <string name="error_location_name_invalid">Invalid name</string>
    <string name="error_location_date_invalid">Invalid date</string>
    <string name="error_location_description_invalid">Invalid description</string>
    <string name="error_location_person_name_invalid">Invalid name</string>
    <string name="error_server_url_invalid">Invalid server URL</string>

    <string name="error_unknown">A unknown error occurred!</string>
    <string name="error_server_communication">The server communication failed!</string>
    <string name="error_server_unauthorized">The server authorization failed!</string>
    <string name="error_server_internal">A unknown server error occurred!</string>
    <string name="error_export_file_io">Could not write export file!</string>

    <string name="day_monday">Mo</string>
    <string name="day_tuesday">Tu</string>
    <string name="day_wednesday">We</string>
    <string name="day_thursday">Th</string>
    <string name="day_friday">Fr</string>
    <string name="day_saturday">Sa</string>
    <string name="day_sunday">So</string>

    <string name="pref_category_sync">Sync</string>
    <string name="pref_category_info">Info</string>
    <string name="pref_title_enable_sync">Sync locations</string>
    <string name="pref_title_server_url">Server URL</string>
    <string name="pref_title_server_password">Server password</string>
    <string name="pref_title_version">Version</string>

</resources>
