<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:key="pref_category_sync"
        android:title="@string/pref_category_sync">

        <SwitchPreference
            android:key="pref_sync_enabled"
            android:defaultValue="@bool/pref_enable_sync"
            android:title="@string/pref_title_enable_sync" />

        <Preference
            android:key="pref_server_url"
            android:persistent="false"
            android:title="@string/pref_title_server_url" />

        <Preference
            android:key="pref_server_password"
            android:persistent="false"
            android:title="@string/pref_title_server_password" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="pref_category_info"
        android:title="@string/pref_category_info">

        <Preference
            android:key="pref_version"
            android:persistent="false"
            android:title="@string/pref_title_version" />

    </PreferenceCategory>

</PreferenceScreen>
