<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/view_title_general"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/category_general"
            android:textSize="13.5sp"
            android:textStyle="bold"
            android:textColor="@color/accent" />

        <TextView
            android:id="@+id/view_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="2dp"
            android:text="Regensburg"
            android:textSize="18sp"
            android:textColor="@color/text_dark" />

        <TextView
            android:id="@+id/view_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="2dp"
            android:text="01.01.2018 - 00:00"
            android:textSize="18sp"
            android:textColor="@color/text_dark" />

        <TextView
            android:id="@+id/view_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="2dp"
            android:visibility="visible"
            android:text="Regensburg is a city in south-east Germany, at the confluence of the Danube, Naab and Regen rivers."
            android:textSize="18sp"
            android:textColor="@color/text_dark" />

        <TextView
            android:id="@+id/view_title_persons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/category_persons"
            android:textSize="13.5sp"
            android:textStyle="bold"
            android:textColor="@color/accent" />

        <TextView
            android:id="@+id/view_no_persons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingBottom="2dp"
            android:visibility="gone"
            android:text="@string/empty_persons"
            android:textSize="18sp"
            android:textColor="@color/text_dark" />

        <LinearLayout
            android:id="@+id/container_persons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="visible" />

    </LinearLayout>

</ScrollView>